# daily_stoic_quote_cli

./: LICENSE  pyproject.toml
daily_stoic_quote/: README.md  main.py  stoic_cli.py
