[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "daily_stoic_cli_quote"
authors = [{name = "Anthony Canzona", email = "anth@galavant.world"}]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "requests >= "
]
